Misc - Fix mobile side menu overflow

--- a/assets/scss/partials/_side-navigation.scss
+++ b/assets/scss/partials/_side-navigation.scss
@@ -21,8 +21,9 @@
     &.menu-expanded {
         .side-menu {
             @include breakpoint(medium down) {
-                height: 100vh;
-                max-height: 100vh;
+                overflow: auto;
+                height: calc(100% - #{$height-nav-medium});
+                max-height: calc(100% - #{$height-nav-medium});
             }
         }
 
@@ -65,6 +66,7 @@
         opacity: 0;
         padding: 0;
         max-height: 0;
+        overflow: hidden;
         visibility: hidden;
         transition: all 250ms ease-in-out;
     }
